src/core/logs/wallet_clippy_latest.log
    Checking wallet v0.1.0 (C:\Users\wmcor\projects\time-coin\wallet)
error: empty line after doc comment
   --> wallet\src\address.rs:97:5
    |
 97 | /     /// Convert address to string
 98 | |
    | |_^
 99 |       /// Get the version byte
100 |       pub fn version(&self) -> u8 {
    |       -------------- the comment documents this function
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#empty_line_after_doc_comments
    = note: `-D clippy::empty-line-after-doc-comments` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::empty_line_after_doc_comments)]`
    = help: if the empty line is unintentional, remove it
help: if the documentation should include the empty line include it in the comment
    |
 98 |     ///
    |

error[E0599]: no function or associated item named `generate` found for struct `ed25519_dalek::SigningKey` in the current scope
   --> wallet\src\keypair.rs:60:39
    |
 60 |         let signing_key = SigningKey::generate(&mut OsRng);
    |                                       ^^^^^^^^ function or associated item not found in `ed25519_dalek::SigningKey`
    |
note: if you're trying to build a new `ed25519_dalek::SigningKey` consider using one of the following associated functions:
      ed25519_dalek::SigningKey::from_bytes
      ed25519_dalek::SigningKey::from_keypair_bytes
   --> C:\Users\wmcor\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ed25519-dalek-2.2.0\src\signing.rs:104:5
    |
104 |     pub fn from_bytes(secret_key: &SecretKey) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
138 |     pub fn from_keypair_bytes(bytes: &[u8; 64]) -> Result<SigningKey, SignatureError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
error: could not compile `wallet` (lib) due to 2 previous errors
